FULLY FUNCTIONAL GENETIC ALGORITHM DONE.